--- a/app.conf
+++ b/app.conf
@@ -1,6 +1,7 @@
 server {
     charset utf-8;
     client_max_body_size 128M;
+    proxy_read_timeout 240s;
     listen 80;
     server_name app;
 
@@ -20,19 +21,22 @@ server {
     gzip_disable "MSIE [1-6]\.";
 
     location / {
-        try_files $uri $uri/ /index.php? $query_string;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     error_page 500 502 503 504 /50x.html;
 
     location ~ \.php$ {
-        try_files $uri =400;
+        try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 600;
+        fastcgi_send_timeount 600;
+        fastcgi_connect_timeout 600;
     }
 
     location ~* \.(jpg|jpeg|git|png|css|js|ico|xml)$ {
