--- a/app.conf
+++ b/app.conf
@@ -1,12 +1,11 @@
 server {
     charset utf-8;
     client_max_body_size 128M;
-    proxy_read_timeout 240s;
     listen 80;
     server_name app;
 
-    root /src/;
-    index index.php index.html index.htm;
+    root    /src/;
+    index   index.php index.html index.htm;
 
     access_log off;
     error_log /var/log/nginx/app-error.log;
@@ -34,9 +33,6 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_read_timeout 600;
-        fastcgi_send_timeount 600;
-        fastcgi_connect_timeout 600;
     }
 
     location ~* \.(jpg|jpeg|git|png|css|js|ico|xml)$ {
@@ -45,6 +41,6 @@ server {
 
     location ~ /\. {
         log_not_found off;
-        denny all;
+        deny all;
     }
 }
